--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,10 @@
 services:
   - type: web
-    name: streamlit-app
+    name: unified-app
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "streamlit run app2.py --server.port=$PORT"
+    startCommand: "python main.py"
     plan: free
-    repo: https://github.com/VishnuNandury/RL_Agent/
-    branch: main
-
-  - type: web
-    name: fastapi-api
-    env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn api:app --host 0.0.0.0 --port=$PORT"
-    plan: free
-    repo: https://github.com/VishnuNandury/RL_Agent
-    branch: main
+    envVars:
+      - key: PORT
+        value: 8000
